added widget and missing base XSD links
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4555 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/documents.html
+++ b/website/documents.html
@@ -253,6 +253,9 @@ documents.</div></li>
   </ul>
   <li class='contenttext'><a name="XMLDefs">General XML Definitions</a></li>
   <ul>
+    <li class='contenttext'><a href="dtds/ofbiz-containers.xsd">OFBiz Containers XSD (ofbiz-containers.xml)</a></li>
+    <li class='contenttext'><a href="dtds/component-loader.xsd">OFBiz Component Load XSD (component-load.xml)</a></li>
+    <li class='contenttext'><a href="dtds/ofbiz-component.xsd ">OFBiz Component XSD (ofbiz-component.xml)</a></li>    
     <li class='contenttext'><a href="dtds/jndi-config.xsd">JNDI Server Config XSD (jndiservers.xml)</a></li>
     <li class='contenttext'><a href="dtds/security-config.xsd">Security Config XSD (security.xml)</a></li>
   </ul>
@@ -279,6 +282,13 @@ documents.</div></li>
   <ul>
     <li class='contenttext'><a href="dtds/site-conf.xsd">Site Config XSD (controller.xml)</a></li>
     <li class='contenttext'><a href="dtds/regions.xsd">Regions Definition XSD (regions.xml)</a></li>
+  </ul>
+  <li class='contenttext'>Widget XML Definitions</li>
+  <ul>
+    <li class='contenttext'><a href="dtds/widget-form.xsd">Form Widget XSD</a></li>
+    <li class='contenttext'><a href="dtds/widget-menu.xsd">Menu Widget XSD</a></li>
+    <li class='contenttext'><a href="dtds/widget-screen.xsd">Screen Widget XSD</a></li>
+    <li class='contenttext'><a href="dtds/widget-tree.xsd">Tree Widget XSD</a></li>
   </ul>
 </ul>
 
