Added link to javolution
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4621 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -452,12 +452,13 @@ target="_blank">iCentris</a></b></p>
           <tr>
             <td align="left">
                 <ul>
-                  <li><a class="buttontext" href="http://sf.net/projects/jpublish/" target="_blank">JPublish</a>
                   <li><a class="buttontext" href="http://freemarker.sourceforge.net/" target="_blank">FreeMarker</a>
                   <li><a class="buttontext" href="http://www.beanshell.org/" target="_blank">BeanShell</a>   
                   <li><a class="buttontext" href="http://jetty.mortbay.org/jetty/index.html" target="_blank">Jetty</a> 
                   <li><a class="buttontext" href="http://jotm.objectweb.org/" target="_blank">JOTM</a>
                   <li><a class="buttontext" href="http://xapool.experlog.com/" target="_blank">XAPool</a>
+                  <li><a class="buttontext" href="http://www.javolution.org/" target="_blank">Javolution</a>
+                  <li><a class="buttontext" href="http://sf.net/projects/jpublish/" target="_blank">JPublish</a>
                   <li><a class="buttontext" href="http://datavision.sf.net/" target="_blank">DataVision</a>
                   <li><a class="buttontext" href="http://jasperreports.sf.net/" target="_blank">JasperReports</a>
                   <li><a class="buttontext" href="http://www.cs.waikato.ac.nz/~ml/weka/" target="_blank">WEKA</a>
