Fixed link to Adirondack name and URL with info from Joe Eckard
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4702 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/marketing.html
+++ b/website/marketing.html
@@ -264,7 +264,7 @@
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.100ok.com:8888/control/main" target="_blank"><b>100OK (Chinese?)</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.1stexclusiv.com:8080/africlipse/control/main" target="_blank"><b>1st Exclusive: Africlipse</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.actionenvelope.com/" target="_blank"><b>Action Envelope</b></a></div>
-              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://icehawks.webfillment.com/control/main" target="_blank"><b>Adirondack Ice Hawks</b></a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://shop.frostbitehockey.com/lp/main" target="_blank"><b>Adirondack Frostbite</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.alarm-panels.com/control/main" target="_blank"><b>Alarm-Panels</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.alcoawheelaccessories.com/store/control/main" target="_blank"><b>Alcoa Accessory Products</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.artreachdallas.org/" target="_blank"><b>Artreach-Dallas</b></a></div>
