Fixed misspelling reported by Adrian Crum
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4810 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/svn.html
+++ b/website/svn.html
@@ -130,7 +130,7 @@
           <td width="1%">&nbsp;&nbsp;&nbsp;</td>
           <td width="37%" valign=top>
 
-          <h2>Anonynous Access</h2>
+          <h2>Anonymous (Guest) Access</h2>
           <p class="contenttext">To connect to the OFBiz SVN Respository for anonymous checkout use your SVN client command line tool:</p>
           <p class="contenttext"><pre>$ svn co http://svn.ofbiz.org/svn/ofbiz/trunk ofbiz</pre></p>
           <hr class="sepbar">
