A WHOLE bunch of cleanups and improvements to the ofbiz.org web site, especially to the home page; this represents a fairly big difference in the style of the site and (hopefully) a huge improvement to the home page
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4852 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/feature-list.html
+++ b/website/feature-list.html
@@ -1,33 +1,38 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
   <title>The Open For Business Project - Feature List</title>
-  <link rel="stylesheet" href="images/maincss.css" type="text/css">
+  <link rel="stylesheet" href="images/ofbws.css" type="text/css"/>
+  <meta name="keywords" content="Open Source ERP,Open Source CRM,Open Source E-Commerce,Open Source eCommerce,Open Source POS,Open Source SCM,Open Source MRP,Open Source CMMS,Open Source EAM,web services,workflow,ebusiness,e-business,ecommerce,e-commerce,automation,enterprise software,open source,entity engine,service engine,erp,crm,party,accounting,facility,supply,chain,management,catalog,order,project,task,work effort,financial,ledger,content management,customer,inventory"/>
 </head>
-<body bgcolor="#ffffff">
-<table width="100%">
-  <tbody>
-    <tr>
-      <td align="left" valign="center" width="50%"> <a
- href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"
- alt="The Open For Business Project" border="0"></a> </td>
-      <td align="right" valign="center" width="50%"> <a
- href="http://sf.net/projects/ofbiz"><img
- src="http://sourceforge.net/sflogo.php?group_id=27173"
- alt="SourceForge Logo" border="0" height="31" width="88"></a> <a
- href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif"
- border="0" width="88"></a> </td>
-    </tr>
-  </tbody>
-</table>
-<hr class="sepbar">
+<body>
+
+<div class="headerboxoutside">
+    <div class="headerboxtop">
+        <div class="left">
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt="The Open For Business Project"/></a>
+        </div>
+        <div class="right">
+            <a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"/></a>
+            &nbsp;&nbsp;
+            <a href="http://sf.net/projects/ofbiz"><img src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"/></a>
+            &nbsp;&nbsp;
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"/></a>
+        </div>
+        <div class="endcolumns"><span>&nbsp;</span></div>
+    </div>
+</div>
+
+<div class="centerarea contentarea">
+
 <center>
 <h2>The Open For Business Project - Feature List</h2>
 </center>
 <div class="contenttext">Written By: David E. Jones, <a
  href="mailto:jonesde@ofbiz.org">jonesde@ofbiz.org</a></div>
-<div class="contenttext">Edited by Les Austin<br>
-Last Updated: 03 August 2004</div>
+<div class="contenttext">Edited by Les Austin</div>
+<div class="contenttext">Last Updated: 03 August 2004</div>
 <p class="contenttext"><b><u>Introduction</u></b></p>
 <p class="contenttext">This purpose of this document is to present the
 features of The Open For Business Project. Because of the scope of the
@@ -1073,5 +1078,7 @@ analysis </li>
 <p class="contenttext">For information about Open For Business contact
 David E. Jones at <a href="mailto:jonesde@ofbiz.org">jonesde@ofbiz.org</a>
 or Andy Zeneski at <a href="mailto:jaz@ofbiz.org">jaz@ofbiz.org</a>.</p>
+
+</div>
 </body>
 </html>
