--- a/website/pressrel-2.0.0.html
+++ b/website/pressrel-2.0.0.html
@@ -1,52 +1,29 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-<HTML>
  <HEAD>
   <TITLE>The Open For Business Project - Press Release for Version 2.0.0</TITLE>
-  <link rel="stylesheet" href="images/maincss.css" type="text/css">
+  <link rel="stylesheet" href="images/ofbws.css" type="text/css"/>
+  <meta name="keywords" content="Open Source ERP,Open Source CRM,Open Source E-Commerce,Open Source eCommerce,Open Source POS,Open Source SCM,Open Source MRP,Open Source CMMS,Open Source EAM,web services,workflow,ebusiness,e-business,ecommerce,e-commerce,automation,enterprise software,open source,entity engine,service engine,erp,crm,party,accounting,facility,supply,chain,management,catalog,order,project,task,work effort,financial,ledger,content management,customer,inventory"/>
  </HEAD>
- <BODY BGCOLOR="#FFFFFF">
-<table cellpadding='0' cellspacing='0' width="100%"><tr>
-<td width="1"><A href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt='The Open For Business Project'></a></td>
-<td width="5%" align=center valign=middle></td>
-<td width="70%" align=right valign=middle>
-  <table cellpadding='0' cellspacing='0' width='1%'>
-    <tr>
-      <td valign='middle' align='right'><A href="http://sf.net/projects/ofbiz"><IMG src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"></A></td>
-      <td valign=middle>&nbsp;&nbsp;</td>
-      <td valign=middle><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>
-    </tr>
-    <!--<tr><td align='right'><div><a href="http://sf.net/projects/ofbiz/" class='headersmalllink'>SourceForge&nbsp;Project&nbsp;(ofbiz)</a></div></td></tr>-->
-    <!-- <tr><td align=right colspan='2'><div class='headersmalltext'>A David E. Jones &amp; Andy Zeneski Project</div></td></tr>-->
-  </tr></table>
-</td>
-</tr></table>
+<body>
+<div class="headerboxoutside">
+    <div class="headerboxtop">
+        <div class="left">
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt="The Open For Business Project"/></a>
+        </div>
+        <div class="right">
+            <a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"/></a>
+            &nbsp;&nbsp;
+            <a href="http://sf.net/projects/ofbiz"><img src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"/></a>
+            &nbsp;&nbsp;
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"/></a>
+        </div>
+        <div class="endcolumns"><span>&nbsp;</span></div>
+    </div>
+</div>
 
-<table cellpadding='0' cellspacing='0' width='100%'><tr>
-  <td class=headerButtonLeft align=center>
-    <a href='index.html' class=headerbuttontext>Home</a>
-  </td>    
-
-  <td class=headerButtonLeft align=center>
-    <a href='philosophy.html' class=headerbuttontext>Philosophy</a>
-  </td>
-
-  <td class=headerButtonLeft align=center>
-    <a href='documents.html' class=headerbuttontext>Docs&nbsp;&amp;&nbsp;Books</a>
-  </td>
-
-  <td class=headerButtonLeft align=center>
-    <a href='marketing.html' class=headerbuttontext>Marketing</a>
-  </td>
-
-  <td class=headerButtonLeft align=center>
-    <a href='presentation/index.html' class=headerbuttontext>Presentation</a>
-  </td>    
-
-  <td class=headerButtonRight align=center>
-    <a href='services.html' class=headerbuttontext>Services</a>
-  </td>
-</tr></table>
+<div class="centerarea contentarea">
 
 <H3>Build vs. Buy vs. OFBiz</H3>
 <h4>Press Release for Open For Business Version 2.0.0</h4>
@@ -56,8 +33,7 @@ its business automation tools, components, and applications on Monday the 20th
 of January 2003. This is the first stable release of the project and offers a 
 new option for organizations of all types that have asked the question of Build 
 vs. Buy. More information about Open For Business can be found on the web site 
-at <a href="http://www.ofbiz.org" target="_blank">www.ofbiz.org</a>.</P>
-
+at <a href="http://www.ofbiz.org" target="_blank">www.ofbiz.org</a>.</p>
 
 <p class='contenttext'>The vision of the Open For Business Project is to embrace 
 and enable the 5 E's: Ease of Cost, Ease of Installation, Ease of Customization, 
@@ -146,5 +122,6 @@ was a master plan for the data model that would not have to change much as
 applications are added or improved.</P>
 </ul>
 
-</BODY>
-</HTML>
+</div>
+</body>
+</html>
