--- a/website/services.html
+++ b/website/services.html
@@ -1,44 +1,30 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
   <title>The Open For Business Project - Services</title>
-  <link rel="stylesheet" href="images/maincss.css" type="text/css">
-  <link rel="stylesheet" href="images/tabstyles.css" type="text/css">
-  <meta name="keywords" content="web,services,workflow,ebusiness,e-business,ecommerce,e-commerce,automation,enterprise,software,open,source,entity,engine,service,erp,crm,party,accounting,facility,supply,chain,management,catalog,order,processing,project,task,workeffort,financial,ledger,content,customer,inventory">
+  <link rel="stylesheet" href="images/ofbws.css" type="text/css"/>
+  <meta name="keywords" content="Open Source ERP,Open Source CRM,Open Source E-Commerce,Open Source eCommerce,Open Source POS,Open Source SCM,Open Source MRP,Open Source CMMS,Open Source EAM,web services,workflow,ebusiness,e-business,ecommerce,e-commerce,automation,enterprise software,open source,entity engine,service engine,erp,crm,party,accounting,facility,supply,chain,management,catalog,order,project,task,work effort,financial,ledger,content management,customer,inventory"/>
 </head>
 
 <BODY BGCOLOR="#FFFFFF">
 
 <!-- start header -->
-<table border="0" width="100%" cellspacing="0" cellpadding="0"
- class="headerboxoutside">
-  <tbody>
-    <tr>
-      <td width="100%">
-      <table width="100%" border="0" cellspacing="0" cellpadding="0" class="headerboxtop">
-        <tbody>
-          <tr>
-            <td align="left" width="1%"><a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg" border="0" alt="The Open For Business Project"/></a></td>
-            <td align="right">
-            <table cellpadding="0" cellspacing="0" width="1%">
-              <tbody>
-                <tr>
-              	 <td valign="middle" align="right"><a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"></a></td>
-                  <td valign="middle">&nbsp;&nbsp;</td>
-                  <td valign="middle" align="right"><a href="http://sf.net/projects/ofbiz"><img src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"></a></td>
-                  <td valign="middle">&nbsp;&nbsp;</td>
-                  <td valign="middle"><a href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>
-                </tr>
-              </tbody>
-            </table>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="headerboxoutside">
+    <div class="headerboxtop">
+        <div class="left">
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt="The Open For Business Project"/></a>
+        </div>
+        <div class="right">
+            <a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"/></a>
+            &nbsp;&nbsp;
+            <a href="http://sf.net/projects/ofbiz"><img src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"/></a>
+            &nbsp;&nbsp;
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"/></a>
+        </div>
+        <div class="endcolumns"><span>&nbsp;</span></div>
+    </div>
+</div>
 <!-- end header -->
 <!-- start tab menu -->
 <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -144,7 +130,7 @@
   </tbody>
 </table>
 <!-- end of tab menu -->
-<div class="centerarea"> <region:render section="header"> </region:render>
+<div class="centerarea">
 <div class="contentarea">
 <div style="border: 0pt none ; margin: 0pt; padding: 0pt; width: 100%;"><!-- content starts -->
 
