--- a/website/training/BasicFrameworkToolsOverview.html
+++ b/website/training/BasicFrameworkToolsOverview.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <meta http-equiv="CONTENT-TYPE"
- content="text/html; charset=windows-1252">
+  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=windows-1252">
   <title>Basic Framework &amp; Tools Overview</title>
   <style>
 		DIV,LI {
