--- a/website/news.html
+++ b/website/news.html
@@ -1,43 +1,34 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-<HTML>
-<HEAD>
+<head>
   <title>The Open For Business Project - News</title>
-  <link rel="stylesheet" href="images/maincss.css" type="text/css">
-  <link rel="stylesheet" href="images/rsscss.css" type="text/css">
-  <link rel="stylesheet" href="images/tabstyles.css" type="text/css">
-  <meta name="keywords" content="web,services,workflow,ebusiness,e-business,ecommerce,e-commerce,automation,enterprise,software,open,source,entity,engine,service,erp,crm,party,accounting,facility,supply,chain,management,catalog,order,processing,project,task,workeffort,financial,ledger,content,customer,inventory">
-</HEAD>
+  <link rel="stylesheet" href="images/rsscss.css" type="text/css"/>
+  <link rel="stylesheet" href="images/ofbws.css" type="text/css"/>
+  <meta name="keywords" content="Open Source ERP,Open Source CRM,Open Source E-Commerce,Open Source eCommerce,Open Source POS,Open Source SCM,Open Source MRP,Open Source CMMS,Open Source EAM,web services,workflow,ebusiness,e-business,ecommerce,e-commerce,automation,enterprise software,open source,entity engine,service engine,erp,crm,party,accounting,facility,supply,chain,management,catalog,order,project,task,work effort,financial,ledger,content management,customer,inventory"/>
+</head>
 
-<BODY BGCOLOR="#FFFFFF">
+<body>
 
 <!-- start header -->
-<table border=0 width='100%' cellspacing='0' cellpadding='0' class='headerboxoutside'>
-  <tr>
-    <td width='100%'>
-      <table width='100%' border='0' cellspacing='0' cellpadding='0' class='headerboxtop'>
-        <tr>
-          <td align=left width='1%'><a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt='The Open For Business Project'></a></td>
-          <td align=right>
-            <table cellpadding="0" cellspacing="0" width="1%">
-              <tr>
-              	<td valign="middle" align="right"><a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"></a></td>
-                <td valign="middle">&nbsp;&nbsp;</td>
-                <td valign="middle" align="right"><A href="http://sf.net/projects/ofbiz"><IMG src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"></A></td>
-                <td valign="middle">&nbsp;&nbsp;</td>
-                <td valign="middle"><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
+<div class="headerboxoutside">
+    <div class="headerboxtop">
+        <div class="left">
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt="The Open For Business Project"/></a>
+        </div>
+        <div class="right">
+            <a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"/></a>
+            &nbsp;&nbsp;
+            <a href="http://sf.net/projects/ofbiz"><img src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"/></a>
+            &nbsp;&nbsp;
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"/></a>
+        </div>
+        <div class="endcolumns"><span>&nbsp;</span></div>
+    </div>
+</div>
 <!-- end header -->
 
 <div class="centerarea">
-  <region:render section='header'/>
   <div class="contentarea">
     <div style='border: 0; margin: 0; padding: 0; width: 100%;'>
     <!-- content starts -->
@@ -143,7 +134,7 @@
     <div class='spacer'></div>
   </div>
 </div>
-<br>
+<br/>
 
-</BODY>
-</HTML>
+</body>
+</html>
