--- a/website/ofbiz-for-me.html
+++ b/website/ofbiz-for-me.html
@@ -1,23 +1,31 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<HTML>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
  <HEAD>
   <TITLE>The Open For Business Project - Is OFBiz for Me?</TITLE>
-  <link rel="stylesheet" href="images/maincss.css" type="text/css">
+  <link rel="stylesheet" href="images/ofbws.css" type="text/css"/>
+  <meta name="keywords" content="Open Source ERP,Open Source CRM,Open Source E-Commerce,Open Source eCommerce,Open Source POS,Open Source SCM,Open Source MRP,Open Source CMMS,Open Source EAM,web services,workflow,ebusiness,e-business,ecommerce,e-commerce,automation,enterprise software,open source,entity engine,service engine,erp,crm,party,accounting,facility,supply,chain,management,catalog,order,project,task,work effort,financial,ledger,content management,customer,inventory"/>
  </HEAD>
- <BODY BGCOLOR="#FFFFFF">
 
-<table width='100%'>
-  <tr>
-    <td width='50%' align='left' valign='center'>
-        <a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt='The Open For Business Project'></a>
-    </td>
-    <td width='50%' align='right' valign='center'>
-        <a href="http://sf.net/projects/ofbiz"><img src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"></a> 
-        <a href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a>
-    </td>
-  </tr>
-</table>
-<hr class='sepbar'>
+<body>
+
+<div class="headerboxoutside">
+    <div class="headerboxtop">
+        <div class="left">
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt="The Open For Business Project"/></a>
+        </div>
+        <div class="right">
+            <a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"/></a>
+            &nbsp;&nbsp;
+            <a href="http://sf.net/projects/ofbiz"><img src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"/></a>
+            &nbsp;&nbsp;
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"/></a>
+        </div>
+        <div class="endcolumns"><span>&nbsp;</span></div>
+    </div>
+</div>
+
+<div class="centerarea contentarea">
 
 <center><h2>The Open For Business Project - Is OFBiz for Me?</h2></center>
 
@@ -341,6 +349,6 @@ increasing your price or costs.</p>
  <p class='contenttext'>For information about Open For Business contact David E. Jones at <a href="mailto:jonesde@ofbiz.org">jonesde@ofbiz.org</a>
  or Andy Zeneski at <a href="mailto:jaz@ofbiz.org">jaz@ofbiz.org</a>. </p>
 
- </BODY>
-</HTML>
-
+</div>
+</body>
+</html>
