--- a/website/philosophy.html
+++ b/website/philosophy.html
@@ -1,38 +1,30 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-<HTML>
-<HEAD>
+<head>
   <title>The Open For Business Project - Philosophy</title>
-  <link rel="stylesheet" href="images/maincss.css" type="text/css">
-  <link rel="stylesheet" href="images/tabstyles.css" type="text/css">
-  <meta name="keywords" content="web,services,workflow,ebusiness,e-business,ecommerce,e-commerce,automation,enterprise,software,open,source,entity,engine,service,erp,crm,party,accounting,facility,supply,chain,management,catalog,order,processing,project,task,workeffort,financial,ledger,content,customer,inventory">
-</HEAD>
+  <link rel="stylesheet" href="images/ofbws.css" type="text/css"/>
+  <meta name="keywords" content="Open Source ERP,Open Source CRM,Open Source E-Commerce,Open Source eCommerce,Open Source POS,Open Source SCM,Open Source MRP,Open Source CMMS,Open Source EAM,web services,workflow,ebusiness,e-business,ecommerce,e-commerce,automation,enterprise software,open source,entity engine,service engine,erp,crm,party,accounting,facility,supply,chain,management,catalog,order,project,task,work effort,financial,ledger,content management,customer,inventory"/>
+</head>
 
-<BODY BGCOLOR="#FFFFFF">
+<body>
 
 <!-- start header -->
-<table border=0 width='100%' cellspacing='0' cellpadding='0' class='headerboxoutside'>
-  <tr>
-    <td width='100%'>
-      <table width='100%' border='0' cellspacing='0' cellpadding='0' class='headerboxtop'>
-        <tr>          
-          <td align="left" width="1%"><a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt='The Open For Business Project'></a></td>
-          <td align="right">
-            <table cellpadding='0' cellspacing='0' width='1%'>
-              <tr>
-              	<td valign="middle" align="right"><a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"></a></td>
-                <td valign="middle">&nbsp;&nbsp;</td>
-                <td valign="middle" align="right"><A href="http://sf.net/projects/ofbiz"><IMG src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"></A></td>
-                <td valign="middle">&nbsp;&nbsp;</td>
-                <td valign="middle"><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>               
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
+<div class="headerboxoutside">
+    <div class="headerboxtop">
+        <div class="left">
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt="The Open For Business Project"/></a>
+        </div>
+        <div class="right">
+            <a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"/></a>
+            &nbsp;&nbsp;
+            <a href="http://sf.net/projects/ofbiz"><img src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"/></a>
+            &nbsp;&nbsp;
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"/></a>
+        </div>
+        <div class="endcolumns"><span>&nbsp;</span></div>
+    </div>
+</div>
 <!-- end header -->
 
 <!-- start tab menu -->
@@ -44,60 +36,60 @@
           <td height="15" class="tabdownblock">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">                
               <tr>
-                <td class="tabdownleft"><a href="index.html" title="Home" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
+                <td class="tabdownleft"><a href="index.html" title="Home" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"/></a></td>
                 <td nowrap="nowrap" class="tabdowncenter"><a href="index.html" title="Home" class="tablink">Home</a></td>
-                <td class="tabdownright"><a href="index.html" title="Home" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
+                <td class="tabdownright"><a href="index.html" title="Home" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"/></a></td>
               </tr>
-              <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"></td></tr>
-              <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"></td></tr>              
+              <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"/></td></tr>
+              <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"/></td></tr>              
             </table>
           </td>	          
           <td height="15" class="mainblock">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">                
               <tr>
-                <td class="tabupleft"><a href="philosophy.html" title="Philosophy" class="tablinkselected"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
+                <td class="tabupleft"><a href="philosophy.html" title="Philosophy" class="tablinkselected"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"/></a></td>
                 <td nowrap="nowrap" class="tabupcenter"><a href="philosophy.html" title="Philosophy" class="tablinkselected">Philosophy</a></td>
-                <td class="tabupright"><a href="philosophy.html" title="Philosophy" class="tablinkselected"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
+                <td class="tabupright"><a href="philosophy.html" title="Philosophy" class="tablinkselected"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"/></a></td>
               </tr>               
             </table>
           </td>       
           <td class="tabdownblock">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">                
               <tr>
-                <td class="tabdownleft"><a href="documents.html" title="Documents" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
+                <td class="tabdownleft"><a href="documents.html" title="Documents" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"/></a></td>
                 <td nowrap="nowrap" class="tabdowncenter"><a href="documents.html" title="Documents" class="tablink">Docs &amp; Books</a></td>
-                <td class="tabdownright"><a href="documents.html" title="Documents" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
+                <td class="tabdownright"><a href="documents.html" title="Documents" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"/></a></td>
               </tr>
-              <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"></td></tr>
-              <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"></td></tr>                                             
+              <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"/></td></tr>
+              <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"/></td></tr>
             </table>
           </td>	            
           <td height="15" class="tabdownblock">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">                
               <tr>
-                <td class="tabdownleft"><a href="marketing.html" title="Marketing" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
+                <td class="tabdownleft"><a href="marketing.html" title="Marketing" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"/></a></td>
                 <td nowrap="nowrap" class="tabdowncenter"><a href="marketing.html" title="Marketing" class="tablink">Marketing</a></td>
-                <td class="tabdownright"><a href="marketing.html" title="Marketing" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
+                <td class="tabdownright"><a href="marketing.html" title="Marketing" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"/></a></td>
               </tr>
-              <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"></td></tr>
-              <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"></td></tr>               
+              <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"/></td></tr>
+              <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"/></td></tr>               
             </table>
           </td>                       
           <td height="15" class="tabdownblock">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">                
               <tr>
-                <td class="tabdownleft"><a href="services.html" title="Services" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
+                <td class="tabdownleft"><a href="services.html" title="Services" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"/></a></td>
                 <td nowrap="nowrap" class="tabdowncenter"><a href="services.html" title="Services" class="tablink">Services</a></td>
-                <td class="tabdownright"><a href="services.html" title="Services" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
+                <td class="tabdownright"><a href="services.html" title="Services" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"/></a></td>
               </tr>
-              <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"></td></tr>
-              <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"></td></tr>               
+              <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"/></td></tr>
+              <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"/></td></tr>               
             </table>
           </td>     
           <td width="100%" style="vertical-align: bottom;">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0">                
+            <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <td class="whitearea"><img src="images/spacer.gif" alt="" height="1"></td>               
+                <td class="whitearea"><img src="images/spacer.gif" alt="" height="1"/></td>               
               </tr>               
             </table>
           </td>                              
@@ -110,12 +102,11 @@
 
 
 <div class="centerarea">
-  <region:render section='header'/>
   <div class="contentarea">
     <div style='border: 0; margin: 0; padding: 0; width: 100%;'>
       <table style='border: 0; margin: 0; padding: 0; width: 100%;' cellpadding='0' cellspacing='0'>
         <tr>          
-          <td width='950' valign=top align=left>   
+          <td width="950" valign="top" align="left">   
           <!-- left side -->
 
           <!-- end left side -->
@@ -144,7 +135,7 @@ source.</p>
 
 <p class='contenttext'>The vision of the Open For Business Project is to produce High Quality Custom
 Enterprise Software which embraces and enables <span style='font-size: medium;'><b>"The 5
-'E's"</b></span>:&nbsp;
+'E's"</b></span>:&nbsp;</p>
 <ol>
   <li class='contenttext'>Ease of Cost</li>
   <li class='contenttext'>Ease of Installation</li>
@@ -192,14 +183,12 @@ fast and cheap. A person that is familiar with the tools and applications in Ope
 able to quickly and inexpensively produce custom software that satisfies the needs of any individual, business or organization.</p>
 
 <p class='contenttext'>To get a better understanding of the organization and components of the Open For Business tools and applications look
-at the General Documents on the <a href='documents.html'>Documentation Page</a>.
-
-<p class='contenttext'>For an introduction to the business and technical concepts behind Open For Business, check out the <a href='presentation/index.html'>OFBiz Overview Presentation.</a>
+at the General Documents on the <a href='documents.html'>Documentation Page</a>.</p>
        
           <!-- end middle -->  
           </td>          
           <td width='5'>&nbsp;&nbsp;&nbsp;</td>
-          <td width='950' valign=top align=right>
+          <td width='950' valign="top" align="right">
           <!-- right size -->
 
           <!-- end right side -->
@@ -210,7 +199,7 @@ at the General Documents on the <a href='documents.html'>Documentation Page</a>.
     <div class='spacer'></div>
   </div>
 </div>
-<br>
+<br/>
 
-</BODY>
-</HTML>
+</body>
+</html>
