Added patch from Joe Eckard to fix some of the CSS issues, especially in IE; Thanks Joe
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4853 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
             &nbsp;&nbsp;
             <a href="http://sf.net/projects/ofbiz"><img src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"/></a>
             &nbsp;&nbsp;
-            <a href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"/></a>
+            <a href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0" alt="Powered By OFBiz" /></a>
         </div>
         <div class="endcolumns"><span>&nbsp;</span></div>
     </div>
@@ -171,7 +171,7 @@
         <a href="http://www.theserverside.com" target="_blank">TheServerSide</a>
 
         <h2>Runs With</h2>
-        <a href="http://www.advantagedatabase.com" target="_blank"><img src="http://resolution.extendedsystems.com/NR/ESI%20Support/ADS/images/advantage_logo.gif" width="125"/></a>
+        <a href="http://www.advantagedatabase.com" target="_blank"><img src="http://resolution.extendedsystems.com/NR/ESI%20Support/ADS/images/advantage_logo.gif" width="125" alt="Advantage Database Server" /></a>
     </div>
     
     <div id="detail-column">
