--- a/website/ofbizmitlicense.html
+++ b/website/ofbizmitlicense.html
@@ -6,7 +6,7 @@
 
 <h3>OFBiz Copyright and MIT Open Source License</h3>
 
-<p>Copyright (c) 2001, 2002 The Open For Business Project - www.ofbiz.org</p>
+<p>Copyright (c) 2001-2005 The Open For Business Project - www.ofbiz.org</p>
 
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
 
