--- a/website/comingsoon.html
+++ b/website/comingsoon.html
@@ -35,11 +35,7 @@
 <h3>Table of Contents</h3>
 <ul>
   <li class="contenttext"><a href="#Inroduction">Inroduction</a>
-  <li class="contenttext"><a href="#Accounting">Accounting</a>
-  <li class="contenttext"><a href="#Content">Content Management</a>
-  <li class="contenttext"><a href="#CRM">Customer Relationship Management (CRM)</a>
-  <li class="contenttext"><a href="#WorkEffort">Work Effort &amp; Request, etc Management</a>
-  <li class="contenttext"><a href="#Manufacturing">Manufacturing Management</a>
+  <li class="contenttext"><a href="#MoreInfo">More Information</a>
 </ul>
 <br>
 
@@ -47,10 +43,10 @@
 <h3><a name="Inroduction">Inroduction</a></h3>
 <hr class="sepbar"/>
 
-<p class="contenttext">The purpose of this document is to help keep users of OFBiz informed 
-about the near term directions that are planned for the project. In some cases we may mention 
+<p class="contenttext">The purpose of this document and the Jira issue tracking system that goes with it is to help keep users of OFBiz informed 
+about the near term directions that are planned for the project. In some cases you may see 
 planned timelines for specific pieces of functionality. In general the presense of a feature 
-or idea in this document does not guarantee that it will be implemented, and the exclusion of
+or idea in these resources does not guarantee that it will be implemented, and the exclusion of
 a feature or idea from this document does not mean that it will not be implemented.</p>
 
 <p class="contenttext">There are many factors that are taken into consideration when deciding 
@@ -86,9 +82,17 @@ members of the community, we have limited design and development resources so we
 somewhat careful about where we use them.</p>
 
 <hr class="sepbar"/>
-<h3><a name="Accounting">Accounting - Notes updated April 2004</a></h3>
+<h3><a name="MoreInfo">More Information</a></h3>
 <hr class="sepbar"/>
 
+<p class="contenttext">OFBiz uses the Jira issue and development management system to keep track
+of things that are happening, that have happened, and that will be happening in the project.
+If you would like to see what is going on, or would like to participate and contribute to OFBiz
+this tool will help you do that.</p>
+
+<p class="contenttext">Now that you are excited about it and interested in it, you can access the <a href="http://jira.ofbiz.org">OFBiz Jira Server at http://jira.ofbiz.org</a>.
+
+<!--
 <p class="contenttext">This is an area of interest for many users and potential users of OFBiz. 
 To date there hasn't been a lot of sponsorship for this functionality, but it may happen soon anyway
 because of the high level of interest in it and the growing number of potential contributors.</p>
@@ -252,6 +256,7 @@ nailed down.</p>
 <a href="http://ofbizwiki.go-integral.com/Wiki.jsp?page=Manufacturing">Manufacturing Wiki Page</a> and
 <a href="http://ofbizwiki.go-integral.com/Wiki.jsp?page=ProductConfiguratorNotes">Product Configurator Notes Wiki Page</a>
 </p>
+-->
 
 </div>
 </body>
