Cleaned up a few misc things to improve the appeal of these documents
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4856 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/documents.html
+++ b/website/documents.html
@@ -118,7 +118,7 @@
           
 <table><tr><td width='50%' valign='top'>
 
-<div align='center' class='head2'>OFBiz Documents</div>
+<div align='center' class='head2'>OFBiz Documentation</div>
 <br/>
 
 <div class='contenttext'><b><u>Training Videos &amp; Documentation</u></b></div>
