--- a/website/ofbiz-for-me.html
+++ b/website/ofbiz-for-me.html
@@ -30,26 +30,25 @@
 <center><h2>The Open For Business Project - Is OFBiz for Me?</h2></center>
 
 <div class='contenttext'>Written By: David E. Jones, <a href="mailto:jonesde@ofbiz.org">jonesde@ofbiz.org</a></div>
-<div class='contenttext'>Last Updated: 25 Feb 2003</div>
 
 <p class='contenttext'><b><u>Table of Contents</u></b></p>
 
 <ul>
   <li class='contenttext'><a href="#Introduction"><b>Introduction</b></a>
   <li class='contenttext'><a href="#buildvsbuy"><b>Asking Build vs. Buy</b></a>
-  <li class='contenttext'><a href="#budget"><b>Budget Conscious Organization</b></a></div>
-  <li class='contenttext'><a href="#custom"><b>Have Custom Needs</b></a></div>
-  <li class='contenttext'><a href="#services"><b>Consulting/Services Company</b></a></div>
+  <li class='contenttext'><a href="#budget"><b>Budget Conscious Organization</b></a>
+  <li class='contenttext'><a href="#custom"><b>Have Custom Needs</b></a></li>
+  <li class='contenttext'><a href="#services"><b>Consulting/Services Company</b></a></li>
   <ul>
-    <li class='contenttext'><a href="#development"><b>Software Development</b></a></div>
-    <li class='contenttext'><a href="#analysis"><b>Business Analysis &amp; Design</b></a></div>
-    <li class='contenttext'><a href="#web_design"><b>Web Design</b></a></div>
-    <li class='contenttext'><a href="#hosting"><b>Hosting</b></a></div>
+    <li class='contenttext'><a href="#development"><b>Software Development</b></a></li>
+    <li class='contenttext'><a href="#analysis"><b>Business Analysis &amp; Design</b></a></li>
+    <li class='contenttext'><a href="#web_design"><b>Web Design</b></a></li>
+    <li class='contenttext'><a href="#hosting"><b>Hosting</b></a></li>
   </ul>
-  <li class='contenttext'><a href="#product"><b>Product Development Company</b></a></div>
-  <li class='contenttext'><a href="#ecommerce_hosting"><b>eCommerce Hosting</b></a></div>
-  <li class='contenttext'><a href="#ecommerce_package"><b>User of an eCommerce Package</b></a></div>
-  <li class='contenttext'><a href="#app_server_vendor"><b>Application Server Vendor</b></a></div>
+  <li class='contenttext'><a href="#product"><b>Product Development Company</b></a></li>
+  <li class='contenttext'><a href="#ecommerce_hosting"><b>eCommerce Hosting</b></a></li>
+  <li class='contenttext'><a href="#ecommerce_package"><b>User of an eCommerce Package</b></a></li>
+  <li class='contenttext'><a href="#app_server_vendor"><b>Application Server Vendor</b></a></li>
 </ul>
 
 <p class='contenttext'><b><u><a name="Introduction">Introduction</a></u></b></p>
