--- a/website/index.html
+++ b/website/index.html
@@ -2,9 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <title>The Open For Business Project - Open Source E-Business / E-Commerce, ERP, CRM, POS</title>
-  <link rel="stylesheet" href="images/ofbws.css" type="text/css"/>
-  <meta name="keywords" content="Open Source ERP,Open Source CRM,Open Source E-Commerce,Open Source eCommerce,Open Source POS,Open Source SCM,Open Source MRP,Open Source CMMS,Open Source EAM,web services,workflow,ebusiness,e-business,ecommerce,e-commerce,automation,enterprise software,open source,entity engine,service engine,erp,crm,party,accounting,facility,supply,chain,management,catalog,order,project,task,work effort,financial,ledger,content management,customer,inventory"/>
+    <title>The Open For Business Project - Open Source E-Business / E-Commerce, ERP, CRM, POS</title>
+    <link rel="stylesheet" href="images/ofbws.css" type="text/css"/>
+    <meta name="keywords" content="Open Source ERP,Open Source CRM,Open Source E-Commerce,Open Source eCommerce,Open Source POS,Open Source SCM,Open Source MRP,Open Source CMMS,Open Source EAM,web services,workflow,ebusiness,e-business,ecommerce,e-commerce,automation,enterprise software,open source,entity engine,service engine,erp,crm,party,accounting,facility,supply,chain,management,catalog,order,project,task,work effort,financial,ledger,content management,customer,inventory"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 
 <body>
@@ -224,7 +225,7 @@
             <a href="http://neogia.labs.libre-entreprise.org/index.html" target="_blank">Neogia</a>
             <a href="http://sourcetapcrm.sourceforge.net" target="_blank">SourceTap CRM</a>
             <a href="http://www.mietta.info" target="_blank">XtraMind Mietta 2</a>
-            <a href="http://www.linux-at-business.com/article.php3?id_article=64" target="_blank">Linux@Business INF (French)</a>
+            <!-- <a href="http://www.linux-at-business.com/article.php3?id_article=64" target="_blank">Linux@Business INF (French)</a> -->
         </p>
 
         <p>Public sites (mostly ecommerce) using OFBiz:
@@ -393,6 +394,15 @@
 
 <!-- content end -->
   </div>
+</div>
+<br/>
+<div align="center">
+    <a href="http://jigsaw.w3.org/css-validator/"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"/></a>
+    <a href="http://validator.w3.org/check?uri=referer"><img style="border:0;width:88px;height:31px" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!"/></a>
+</div>
+<br/>
+<div class="tabletext" align="center">
+  <div class="tabletext">Copyright (c) 2001-2005 The Open For Business Project - <a href="http://www.ofbiz.org" class="tabletext" target="_blank">www.ofbiz.org</a></div>
 </div>
 <br/>
 
