Updated links for new demo server run by Hans Bakker
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4953 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -120,10 +120,10 @@
         <a href="http://demo.dejc.com:8080/ecommerce/control/main" target="_blank">eCommerce Demo</a>
         <a href="https://demo.dejc.com:8443/catalog/control/login/main?USERNAME=demoadmin&amp;PASSWORD=ofbiz" target="_blank">Management Console</a>
         <h3>Extended Demo <a href="http://www.opentravelsystem.org" target="_blank">by Open Travel System</a></h3>
-        <a href="http://orion2.a-net.nl:8180/ecommerce/control/main" target="_blank">eCommerce Demo</a>
-        <a href="https://orion2.a-net.nl:8443/catalog/control/login/main?USERNAME=demoadmin&amp;PASSWORD=ofbiz" target="_blank">Management Console</a>
-        <a href="http://orion2.a-net.nl:8180/hotelfrontend/control/main" target="_blank">Hotel Frontend</a>
-        <a href="https://orion2.a-net.nl:8443/hotelbackend/control/login/main?USERNAME=demoadmin&amp;PASSWORD=ofbiz" target="_blank">Hotel Backend</a>
+        <a href="http://test.opentravelsystem.org/ecommerce/control/main" target="_blank">eCommerce Demo</a>
+        <a href="https://test.opentravelsystem.org/catalog/control/login/main?USERNAME=demoadmin&amp;PASSWORD=ofbiz" target="_blank">Management Console</a>
+        <a href="http://test.opentravelsystem.org/hotelfrontend/control/main" target="_blank">Hotel Frontend</a>
+        <a href="https://test.opentravelsystem.org/hotelbackend/control/login/main?USERNAME=demoadmin&amp;PASSWORD=ofbiz" target="_blank">Hotel Backend</a>
 
         <h2>Download OFBiz</h2>
         <a href="http://www.undersunconsulting.com/control/onlineinfo.html?atc=OFB">Production Setup Guide</a>
